force-app/main/default/objects/SurveyEmailConfig__c/SurveyEmailConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Набор настроек для создания и отправки электронного письма.</description>
    <label>SurveyEmailConfig</label>
</CustomObject>