force-app/main/default/objects/SurveyEmailConfig__c/fields/Company_Config__c.field-meta.xml
<CustomField>
    <fullName>Company_Config__c</fullName>
    <label>Company Config</label>
    <length>30</length>
    <type>Text</type>
</CustomField>