force-app/main/default/objects/SurveyEmailConfig__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>