force-app/main/default/objects/SurveyEmailConfig__c/fields/Url_Config__c.field-meta.xml
<CustomField>
    <fullName>Url_Config__c</fullName>
    <label>Url Config</label>
    <length>30</length>
    <type>Text</type>
</CustomField>